--- a/src/main/resources/templates/usr/member/layout.html
+++ b/src/main/resources/templates/usr/member/layout.html
@@ -70,8 +70,8 @@
 <nav>
     <div class="navbar text-accent bg-[#121212]">
         <div class="navbar-start">
-            <a class="btn btn-ghost normal-case" href="/">
-                <h3 class="text-green-500">DevChall</h3>
+            <a class="btn btn-ghost normal-case" href="/" style="color: #03FA6E;">
+                <h3>DevChall</h3>
             </a>
 
             <div class="form-control">
