--- a/src/main/resources/templates/usr/challenge/write_form.html
+++ b/src/main/resources/templates/usr/challenge/write_form.html
@@ -10,6 +10,7 @@
     <div class="flex flex-1">
         <form method="post" th:action="@{|/usr/challenge/write_form/${challenge.id}|}"
               enctype="multipart/form-data" class="flex flex-col justify-center items-center w-full">
+
             <div class="card bg-white">
                 <div class="w-full p-10 lg:w-[65rem]">
                     <h3 class="text-lg">
@@ -18,7 +19,7 @@
                     </h3>
 
                     <div class="flex flex-col gap-4 justify-center lg:flex-row">
-                        <div class="flex flex-col space-y-4  flex-1">
+                        <div class="flex flex-col space-y-4 flex-1 lg:mr-10">
                             <div>
                                 <div class="w-full">
                                     <label for="title" class="label">
@@ -39,7 +40,9 @@
                                               id="contents"></textarea>
                                 </div>
                             </div>
+                        </div>
 
+                        <div class="flex flex-col space-y-4">
                             <div>
                                 <div class="w-full">
                                     <label for="contents" class="label">
