--- a/src/main/resources/templates/usr/challenge/postdetail.html
+++ b/src/main/resources/templates/usr/challenge/postdetail.html
@@ -152,7 +152,7 @@
         <div class="card bg-white border-md w-5/6 h-full">
             <div class="flex flex-col h-1/2">
 
-                <div class="divider"></div>
+<!--                <div class="divider"></div>-->
                 <div class="my-2" th:each="comment:${commentList}" th:unless="${#lists.isEmpty(commentList) or commentList == null}">
                     <div th:unless ="${#strings.equals(comment.challengeMember.challenger.id, @rq.member.id)}" class="chat chat-start">
                         <div class="chat-image avatar">
@@ -169,15 +169,19 @@
                     </div>
                     <div th:if ="${#strings.equals(comment.challengeMember.challenger.id, @rq.member.id)}" class="chat chat-end">
                         <div class="chat-image avatar">
-                            <div class="w-10 rounded-full">
+                            <div class="w-10 rounded-full mr-7">
                                 <img class="rounded-full" src="https://kr.object.ncloudstorage.com/devchall/devchall_img/person.png" />
                             </div>
                         </div>
-                        <div th:text ="${comment.challengeMember.challenger.nickname}" class="chat-header">
+                        <div th:text ="${comment.challengeMember.challenger.nickname}"
+                             class="chat-header"
+                             th:style="'color: #' + ${@rq.member.equippedFont.item.pattern}">
                             Anakin
                             <time class="text-xs opacity-50" th:text="${#temporals.format(comment.createDate, 'yy.MM.dd HH:mm')}" >12:46</time>
                         </div>
-                        <div class="chat-bubble" style="color: #000000; background-color: #03FA6E7C;" th:text="${comment.commentContent}">I hate you!</div>
+                        <div class="chat-bubble" style="color: #000000; background-color: #03FA6E7C;"
+                             th:text="${comment.commentContent}"
+                             th:style="'background-color: #' + ${@rq.member.equippedFont.item.pattern} +'; color: #' + ${@rq.member.equippedFont.item.subPattern}">I hate you!</div>
                     </div>
                 </div>
                 <!--데이지ui 사용한 댓글창과 버튼 수정-->
