--- a/src/main/resources/templates/usr/challenge/write_form.html
+++ b/src/main/resources/templates/usr/challenge/write_form.html
@@ -96,10 +96,10 @@
                                     <span class="text-black text-xs font-thin">인증글을 공개하고, 다른 챌린저들의 응원을 받아보세요!</span>
                                 </div>
                                 <div class="input-box w-80 flex items-center mt-3">
-                                    <input type="radio" name="status" id="public" value=true class="radio radio-accent ml-10" checked/>
+                                    <input type="radio" name="status" id="public" value=true class="radio radio ml-10" checked/>
                                     <label for="public" class="text-black ml-2">공개</label>
                                     <div class="flex items-center ml-10">
-                                        <input type="radio" name="status" id="private" value=false class="radio radio-accent ml-10"/>
+                                        <input type="radio" name="status" id="private" value=false class="radio radio ml-10"/>
                                         <label for="private" class="text-black ml-2">비공개</label>
                                     </div>
                                 </div>
@@ -109,7 +109,7 @@
                                     <label for="img" class="label">
                                         <span class="text-black font-bold">인증 이미지</span>
                                     </label>
-                                    <input id="img" name="file" type="file" class="file-input file-input-bordered file-input-accent border-green-500 w-full max-w-xs" />
+                                    <input id="img" name="file" type="file" class="file-input file-input-bordered file-input border-green-500 w-full max-w-xs" />
                                 </div>
 
                                 <div class="parent-container mt-5 flex justify-center"> <!-- 수정: 가운데 정렬 -->
