--- a/src/main/resources/templates/usr/challenge/modifypost.html
+++ b/src/main/resources/templates/usr/challenge/modifypost.html
@@ -80,10 +80,10 @@
                         </div>
 
                         <div class="input-box w-80 flex items-center mt-3" style="background-color: #ffffff; height: 60px; border-radius: 10px;">
-                            <input type="radio" name="status" id="public" value=true class="radio radio-accent ml-10" checked/>
+                            <input type="radio" name="status" id="public" value=true class="radio radio ml-10" checked/>
                             <label for="public" class="text-black ml-2">공개</label>
                             <div class="flex items-center ml-10">
-                                <input type="radio" name="status" id="private" value=false class="radio radio-accent ml-10"/>
+                                <input type="radio" name="status" id="private" value=false class="radio radio ml-10"/>
                                 <label for="private" class="text-black ml-2">비공개</label>
                             </div>
                         </div>
