--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -57,7 +57,7 @@
     <!--  헤더 끝  -->
 
 
-    <section class="bg-[#F2F4F4] h-full" style="border-top-left-radius: 4rem;">
+    <section class="bg-[#F2F4F4] h-full flex flex-col items-center" style="border-top-left-radius: 4rem;">
 
         <!--    나의 챌린지  -->
         <article th:if="${@rq.login}" class="p-5 mx-5">
@@ -109,8 +109,8 @@
 
         <!--    챌린지 리스트 시작   -->
         <article class="p-5 mx-5">
-            <div class="p-2">
-                <h1 class="text-black text-2xl font-bold">>모집 중인 챌린지
+            <div th:classappend="${challenges.isEmpty()} ? 'w-[80vw]'" class="p-2">
+                <h1 class="text-black text-2xl font-bold">>모집 중인 챌린지</h1>
                     <span th:if="${param.subject != null && !param.subject.isEmpty()}">
                         <span class="badge badge-primary mx-1" th:if="${#strings.equals(param.subject, 'test')}">시험 대비</span>
                         <span class="badge badge-primary mx-1" th:if="${#strings.equals(param.subject, 'project')}">프로젝트</span>
@@ -121,14 +121,14 @@
                     </span>
                     <span class="badge badge-accent mx-1" th:if="${param.language != null && !param.language.isEmpty()}"
                           th:text="${param.language}"></span>
-                </h1>
+
             </div>
-            <div class="text-center mt-10 text-black" th:if="${challenges == null or #lists.isEmpty(challenges)}" >
+            <div class="text-center mt-10 text-black" th:if="${challenges == null or challenges.isEmpty()}" >
                 <i class="fa-regular fa-face-laugh"></i> 모집중인 챌린지가 없어요. 새로운 챌린지를 생성해보세요!
             </div>
             <div th:unless="${challenges == null or #lists.isEmpty(challenges)}">
 
-                <div class="grid grid-cols-1 md:grid-cols-3 xl:grid-cols-5 gap-[20px]">
+                <div class="grid grid-cols-1 md:grid-cols-5 xl:grid-cols-5 gap-[20px]">
                     <div th:each="challenge:${challenges}">
                         <div class="text-black">
                             <div class="card w-[200px] h-auto bg-base-100 shadow-xl text-gray-400 my-2 mx-5">
@@ -166,6 +166,25 @@
             </div>
         </article>
         <!--    챌린지 리스트 끝-->
+        <!-- 페이징 시작-->
+        <div class="join pb-10"
+             th:if="${!challenges.isEmpty()}">
+            <a th:if="${challenges.hasPrevious}"
+               class="join-item btn btn-accent btn-sm btn-outline"
+               th:href="@{|?page=${challenges.number-1}|}">
+                <span><<</span>
+            </a>
+            <a th:each="page:${#numbers.sequence(0, challenges.totalPages-1)}"
+               th:text="${page+1}"
+               th:href="@{|?page=${page}|}"
+               th:classappend="${page == challenges.number} ? 'btn-active'"
+               class="join-item btn btn-accent btn-sm mx-1">1</a>
+            <a th:if="${challenges.hasNext}"
+               th:href="@{|?page=${challenges.number+1}|}"
+               class="join-item btn btn-accent btn-sm btn-outline">
+                <span>>></span>
+            </a>
+        </div>
     </section>
 
 </main>
